...
                                                        <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Open Time Picker" label="timeSelectTapped"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                        <state key="normal" image="timebar.png">
...
                                        <rect key="frame" x="6" y="6" width="51" height="31"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" label="mapButton"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" image="map-button.png">
...
                                        <rect key="frame" x="248" y="6" width="65" height="31"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" hint="autoTapped" label="autoButton"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" image="auto-button.png">
...
                                        <rect key="frame" x="61" y="3" width="182" height="44"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Station Search Button"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal">
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                <items>
                                                    <barButtonItem title="Now" id="mgx-0X-afs">
                                                        <attributedString key="userComments">
                                                            <fragment content="datePickerNowTapped">
...
                                                    </barButtonItem>
                                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="yU7-b0-lfc"/>
                                                    <barButtonItem title="Done" id="udv-mB-3RC">
                                                        <attributedString key="userComments">
                                                            <fragment content="datePickerDoneTapped">
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Non Auto Time Picker" label="datePIcker"/>
                                                <connections>
                                                    <outlet property="dataSource" destination="mfC-Sg-xCn" id="6zC-Wd-SX2"/>
...
