...
    // Load the map
    NSString *path = [[NSBundle mainBundle] pathForResource:@"map" ofType:@"pdf"];
    
    NSURL *url = [NSURL fileURLWithPath:path];
    NSURLRequest *request = [NSURLRequest requestWithURL:url];
    [self.pdfWebView loadRequest:request];
    self.pdfWebView.accessibilityIdentifier = @"Map View";
    
    // Setup and begin the flicker timer
    for (int i=0; i<6; i++) {
        UIImageView *brokenLED = [[UIImageView alloc] initWithImage:[UIImage imageNamed:@"broken-LED"]];
        [self.contentSubView addSubview:brokenLED];
        [NSTimer scheduledTimerWithTimeInterval:0 target:self selector:@selector(placeBrokenLED:) userInfo:brokenLED repeats:NO];
...
    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(headingUpdated) name:DRNotificationName.headingUpdated object:nil];
    
    // Set the initial selected buttons
    self.nbButton.selected = YES;
    self.nbButton.accessibilityIdentifier = @"North Or West Button";
    self.sbButton.selected = NO;
    self.sbButton.accessibilityIdentifier = @"South Or East Button";
    
}

- (void)viewWillLayoutSubviews {
    [super viewWillLayoutSubviews];
    
...
-(void)changeLightboardTo:(Station *)_station {
    [self clearLightboard];
    
    // Nil station means show search

    UILabel *nameLabel = [[UILabel alloc] init];
    nameLabel.accessibilityIdentifier = @"Station Name Label";
    nameLabel.text = _station.columnName ?: @"";
    nameLabel.font = [UIFont fontWithName:DRFontName.lightboard size:32];
    UIColor *lightboardOrange = [UIColor colorWithRed:(255/255.0)
                                                green:(130/255.0)
                                                 blue:(14/255.0)
                                                alpha:1];
...
