...
    return NSLocalizedString(@"Sunday",
                             @"Title for 'Sunday' choice in schedule type dropdown");
}

+ (NSString *)holiday
{
    return NSLocalizedString(@"Holiday",
                             @"Title for 'Holiday' choice in schedule type dropdown");
}

+ (NSString *)lessThanOneMinute
{
    return NSLocalizedString(@"< 1 Minute",
...
